--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  --maincolor: #806e60e8;
+  --maincolor: #806e60;
   --btn-color: #806e60e8;
   --browm: rgb(73, 54, 40);
   --lightBroun: #e3d6c5;
